# ext4fs-forensic

./: Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
docs/plans/: 2026-04-01-forensic-integration-and-checksums.md  2026-04-02-4n6mount-extraction-design.md  2026-04-02-clippy-htree-fuse-design.md  2026-04-02-clippy-htree-fuse-plan.md  2026-04-02-forensic-features-design.md  2026-04-02-forensic-features-plan.md  2026-04-09-cross-repo-integration-design.md
docs/superpowers/plans/: 2026-03-31-ext4fs-library.md
docs/superpowers/specs/: 2026-03-31-ext4fs-forensic-design.md
ext4fs/: Cargo.toml
ext4fs-cli/: Cargo.toml
ext4fs-cli/src/: main.rs  mcp.rs
ext4fs-fuse/: Cargo.toml
ext4fs-fuse/src/: filter.rs  fusefs.rs  inode_map.rs  main.rs  session.rs
ext4fs/src/: block.rs  dir.rs  error.rs  inode.rs  lib.rs
ext4fs/src/forensic/: carving.rs  deleted.rs  dir_recovery.rs  hash.rs  history.rs  journal.rs  mod.rs  recovery.rs  search.rs  slack.rs  superblock_verify.rs  timeline.rs  xattr.rs
ext4fs/src/ondisk/: dir_entry.rs  extent.rs  group_desc.rs  inode.rs  journal.rs  mod.rs  superblock.rs  xattr.rs
tests/: create-forensic-img.sh  create-minimal-image.sh
