[package]
name = "ext4fs-fuse"
version = "0.1.0"
edition = "2021"
description = "Forensic FUSE mount for ext4 images"
license = "MIT"

[dependencies]
ext4fs = { path = "../ext4fs" }
fuser = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"
